--- a/config/cameraconfig.json
+++ b/config/cameraconfig.json
@@ -1,10 +1,17 @@
 
 {
   "network":
-    {"h264_pub_port":      5876,
-     "jpeg_router_port":   5877},
+    {"event_pub_port":      5875,
+     "h264_pub_port":       5876,
+     "jpeg_router_port":    5877,
+     "net_frame_size":      4096},
 
   "camera":
-    {}
+    {"bitrate":             800000,
+     "framerate":           10},
+
+  "motion":
+    {"magnitude_threshold": 60,
+     "block_threshold":     10}
 }
 
